sample/asm/errors/entering_undefined_block.asm
.function: main/1
    try
    enter foo

    izero 0
    return
.end
